// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with expenses 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary without expenses 1`] = `
<div>
  <h1>
    Viewing 
    0
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;
